data/derived/comb/progs/unify/prog6586.ml.out
Characters 69-89:
  |_->bigAdd (bigAdd l l) (mulByDigit (i-1) l);;
                          ^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         int list
